feat: добавить файловую структуру для quote

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body class="page">
-  <header class="header">
+
+  <!-- Юлия -->
+  <!--
+    <header class="header">
     <ul class="header__links">
       <li>
         <a href="#" class="header__link">Покрытия и градиенты</a>
@@ -22,11 +25,16 @@
         <a href="#" class="header__link">Тренировки</a>
       </li>
     </ul>
-  </header> <!-- Юлия -->
+  </header>
+  -->
+
   <main class="content">
-    <section class="lead">
+    <!-- Секция первого экрана (с прилипающим велосипедом)---Юлия -->
+    <!--
+      <section class="lead">
       <h1 class="lead__title">Шоссе, ТТ&nbsp;и&nbsp;Грэвел</h1>
-      <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
+      <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным
+        маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
       <button class="lead__button">Подробнее</button>
       <div class="lead__bicycle-model">
         <p class="lead__name">Cannondale Systemsix</p>
@@ -35,24 +43,35 @@
       <div class="lead__container">
         <img src="./images/lead/cannondale-systemsix.jpg" alt="Горный велосипед" class="lead__image">
       </div>
-    </section> <!-- Секция первого экрана (с прилипающим велосипедом)---Юлия -->
+    </section>
+    -->
+
+    <!-- Секция с цитатой---Алла -->
     <section class="quote">
       <img src="/images/quote/cyclist.jpg" alt="Человек едет в горы на велосипеде" class="quote__image">
       <div class="quote__text-container">
-        <blockquote class="quote__text">&laquo;Катайся много или мало, долго или коротко, как хочешь&nbsp;&mdash; но&nbsp;катайся&raquo;</blockquote>
+        <blockquote class="quote__text">&laquo;Катайся много или мало, долго или коротко, как хочешь&nbsp;&mdash;
+          но&nbsp;катайся&raquo;</blockquote>
         <p class="quote__author">Эдди Меркс</p>
         <p class="quote__author-subline">Велогонщик</p>
       </div>
-    </section> <!-- Секция с цитатой---Алла -->
+    </section>
+
+    <!-- Секция Шоссе---Алла -->
     <section class="trails">
       <h2 class="trails__title">Шоссе</h2>
-      <p class="trails__text">На&nbsp;шоссейном велосипеде можно ездить по&nbsp;асфальту на&nbsp;разных градиентах: будь&nbsp;то горы или равнины. Гонки проходят в&nbsp;командном пелотоне, но&nbsp;тренироваться можно и&nbsp;самостоятельно.</p>
+      <p class="trails__text">На&nbsp;шоссейном велосипеде можно ездить по&nbsp;асфальту на&nbsp;разных градиентах:
+        будь&nbsp;то горы или равнины. Гонки проходят в&nbsp;командном пелотоне, но&nbsp;тренироваться можно
+        и&nbsp;самостоятельно.</p>
       <img src="./images/trails/road.jpg" alt="Дорога в горы" class="trails__image">
       <div class="quote__buttons-container">
         <button><img src="./images/trails/left-arrow.svg" alt="Стрелка влево" class="trails__button"></button>
         <button><img src="./images/trails/right-arrow.svg" alt="Стрелка вправо" class="trails__button"></button>
       </div>
-    </section> <!-- Секция Шоссе---Алла -->
+    </section>
+
+    <!-- Секция Велосипеды---Юлия -->
+    <!--
     <section class="bicycles">
       <h2 class="bicycles__title">Велосипеды</h2>
       <ul class="bicycles__links">
@@ -67,22 +86,33 @@
         </li>
       </ul>
       <figure class="bicycles__container">
-        <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN" target="_blank"><img src="./images/bicycles/cervelo-caledonia.jpg" alt="Велосипед Червел Каледония" class="bicycles__image"></a>      
+        <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN"
+          target="_blank"><img src="./images/bicycles/cervelo-caledonia.jpg" alt="Велосипед Червел Каледония"
+            class="bicycles__image"></a>
         <figcaption class="bicycles__caption">Cervelo Caledonia-5</figcaption>
       </figure>
       <figure class="bicycles__container">
-        <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J" target="_blank"><img src="./images/bicycles/cannondale-systemsix.jpg" alt="Велосипед Каннондейл" class="bicycles__image"></a>      
+        <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
+          target="_blank"><img src="./images/bicycles/cannondale-systemsix.jpg" alt="Велосипед Каннондейл"
+            class="bicycles__image"></a>
         <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
       </figure>
       <figure class="bicycles__container">
-        <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF" target="_blank"><img src="./images/bicycles/trek-domane.jpg" alt="Велосипед Трек Домейн" class="bicycles__image"></a>      
+        <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
+          target="_blank"><img src="./images/bicycles/trek-domane.jpg" alt="Велосипед Трек Домейн"
+            class="bicycles__image"></a>
         <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
       </figure>
-    </section> <!-- Секция Велосипеды---Юлия -->
+    </section>
+    -->
+
+    <!-- Секция Тренировки---Алла -->
     <section class="practices">
       <h2 class="practices__title">Тренировки</h2>
       <div class="practices__container">
-        <p class="practices__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а&nbsp;записать эти тренировки поможет приложение Strava, а&nbsp;также это приложение позволит построить тренировочный план.</p>
+        <p class="practices__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot,
+          а&nbsp;записать эти тренировки поможет приложение Strava, а&nbsp;также это приложение позволит построить
+          тренировочный план.</p>
         <ul class="practices__links">
           <li>
             <a href="https://www.strava.com" target="_blank" class="practices__link">Strava</a>
@@ -93,12 +123,13 @@
         </ul>
       </div>
       <img src="./images/practices/forest-road.jpg" alt="Дорога в лесу" class="practices__image">
-    </section> <!-- Секция Тренировки---Алла -->
+    </section>
   </main>
+
   <footer class="footer">
     <form class="footer__form"></form>
-      <label class="footer__form-label" for="email">Подпишитесь на&nbsp;рассылку &mdash;</label>
-      <input class="footer__form-email" type="email" name="email" id="email" placeholder="Ваш e-mail">
+    <label class="footer__form-label" for="email">Подпишитесь на&nbsp;рассылку &mdash;</label>
+    <input class="footer__form-email" type="email" name="email" id="email" placeholder="Ваш e-mail">
     </form>
     <p class="footer__author">&copy; Road Club 2021</p>
   </footer>
