feat: изменить html-структуру quote и добавить стили quote

--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
     <!-- Секция с цитатой---Алла -->
     <section class="quote">
       <img src="/images/quote/cyclist.jpg" alt="Человек едет в горы на велосипеде" class="quote__image">
-      <div class="quote__text-container">
-        <blockquote class="quote__text">&laquo;Катайся много или мало, долго или коротко, как хочешь&nbsp;&mdash;
-          но&nbsp;катайся&raquo;</blockquote>
-        <p class="quote__author">Эдди Меркс</p>
-        <p class="quote__author-subline">Велогонщик</p>
-      </div>
+      <blockquote class="quote__text-container">
+        <p class="quote__text">&laquo;Катайся много или мало, долго или коротко, как хочешь - но катайся&raquo;</p>
+      </blockquote>
+      <p class="quote__author">Эдди Меркс</p>
+      <p class="quote__author-subline">Велогонщик</p>
     </section>
 
     <!-- Секция Шоссе---Алла -->
