feat: оптимизировать изображения quote

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
     <!-- Секция с цитатой---Алла -->
     <section class="quote">
-      <img src="/images/quote/cyclist.jpg" alt="Человек едет в горы на велосипеде" class="quote__image">
+      <picture class="quote__image">
+        <source srcset="./images/quote/cyclist-s.jpg" media="(max-width: 424px)">
+        <img class="quote__image_size" src="./images/quote/cyclist-m.jpg" alt="Человек едет в горы на велосипеде">
+      </picture>
       <blockquote class="quote__text-container">
         <p class="quote__text">&laquo;Катайся много или мало, долго или коротко, как хочешь - но катайся&raquo;</p>
       </blockquote>
