feat: создать html и файловую структуру для trails

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="page">
 
   <!-- Юлия -->
+  <!--
   <header class="header">
     <ul class="header__links">
       <li>
@@ -25,9 +26,10 @@
       </li>
     </ul>
   </header>
-
+-->
   <main class="content">
     <!-- Секция первого экрана (с прилипающим велосипедом)---Юлия -->
+    <!--
     <section class="lead">
       <h1 class="lead__title">Шоссе, ТТ&nbsp;и&nbsp;Грэвел</h1>
       <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным
@@ -41,7 +43,7 @@
         <img src="./images/lead/cannondale-systemsix.jpg" alt="Горный велосипед" class="lead__image">
       </div>
     </section>
-
+-->
 
     <!-- Секция с цитатой---Алла -->
     <section class="quote">
@@ -52,7 +54,7 @@
       <blockquote class="quote__text-container">
         <p class="quote__text">&laquo;Катайся много или мало, долго или коротко, как хочешь - но катайся&raquo;</p>
       </blockquote>
-      <p class="quote__author">Эдди Меркс</p>
+      <h2 class="quote__author">Эдди Меркс</h2>
       <p class="quote__author-subline">Велогонщик</p>
     </section>
 
@@ -62,14 +64,19 @@
       <p class="trails__text">На&nbsp;шоссейном велосипеде можно ездить по&nbsp;асфальту на&nbsp;разных градиентах:
         будь&nbsp;то горы или равнины. Гонки проходят в&nbsp;командном пелотоне, но&nbsp;тренироваться можно
         и&nbsp;самостоятельно.</p>
-      <img src="./images/trails/road.jpg" alt="Дорога в горы" class="trails__image">
-      <div class="quote__buttons-container">
-        <button><img src="./images/trails/left-arrow.svg" alt="Стрелка влево" class="trails__button"></button>
-        <button><img src="./images/trails/right-arrow.svg" alt="Стрелка вправо" class="trails__button"></button>
+      <div class="trails__slider">
+        <div class="trials__sticker"></div>
+        <img src="./images/trails/road.jpg" alt="Дорога в горы" class="trails__image">
+        <img src="./images/trails/road.jpg" alt="Велосипедист в лесу" class="trails__image">
+      </div>
+      <div class="trails__buttons-container">
+        <button type="button" class="trails__button trails__button_left"></button>
+        <button type="button" class="trails__button trails__button_right"></button>
       </div>
     </section>
 
     <!-- Секция Велосипеды---Юлия -->
+    <!--
     <section class="bicycles">
       <h2 class="bicycles__title">Велосипеды</h2>
       <ul class="bicycles__links">
@@ -102,8 +109,9 @@
         <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
       </figure>
     </section>
-
+-->
     <!-- Секция Тренировки---Алла -->
+    <!--
     <section class="practices">
       <h2 class="practices__title">Тренировки</h2>
       <div class="practices__container">
@@ -130,6 +138,7 @@
     </form>
     <p class="footer__author">&copy; Road Club 2021</p>
   </footer>
+-->
 </body>
 
 </html>
