header and lead

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <ul class="header__links">
       <li>
-        <a href="#" class="header__link">Покрытия и градиенты</a>
+        <a href="#" class="header__link">Покрытия и&nbsp;градиенты</a>
       </li>
       <li>
         <a href="#" class="header__link">Велосипеды</a>
@@ -25,7 +25,7 @@
   </header> <!-- Юлия -->
   <main class="content">
     <section class="lead">
-      <h1 class="lead__title">Шоссе, ТТ&nbsp;и&nbsp;Грэвел</h1>
+      <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
       <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
       <button class="lead__button">Подробнее</button>
       <div class="lead__bicycle-model">
