--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
   <main class="content">
     <!-- Секция первого экрана (с прилипающим велосипедом)---Юлия -->
     <section class="lead">
-      <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
-      <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
-      <button class="lead__button">Подробнее</button>
-      <div class="lead__bicycle-model">
-        <p class="lead__name">Cannondale Systemsix</p>
-        <div class="lead__decoration"></div>
+      <div class="lead__description">
+        <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
+        <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
+        <button class="lead__button">Подробнее</button>
+        <div class="lead__bicycle-model">
+          <p class="lead__name">Cannondale Systemsix</p>
+          <div class="lead__decoration"></div>
+        </div>
       </div>
       <div class="lead__container">
+        <img src="./images/lead/background.jpg" alt="Горный велосипед" class="lead__background">
         <img src="./images/lead/cannondale-systemsix.jpg" alt="Горный велосипед" class="lead__image">
       </div>
     </section>
