style: добавить стили для trails

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="page">
 
   <!-- Юлия -->
+  <!--
   <header class="header">
     <ul class="header__links">
       <li>
@@ -25,9 +26,10 @@
       </li>
     </ul>
   </header>
-
+-->
   <main class="content">
     <!-- Секция первого экрана (с прилипающим велосипедом)---Юлия -->
+    <!--
     <section class="lead">
       <div class="lead__description">
         <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
@@ -43,7 +45,7 @@
         <img src="./images/lead/cannondale-systemsix.jpg" alt="Горный велосипед" class="lead__image">
       </div>
     </section>
-
+-->
     <!-- Секция с цитатой---Алла -->
     <section class="quote">
       <picture class="quote__image">
@@ -60,12 +62,15 @@
     <!-- Секция Шоссе---Алла -->
     <section class="trails">
       <h2 class="trails__title">Шоссе</h2>
-      <p class="trails__text">На&nbsp;шоссейном велосипеде можно ездить по&nbsp;асфальту на&nbsp;разных градиентах:
-        будь&nbsp;то горы или равнины. Гонки проходят в&nbsp;командном пелотоне, но&nbsp;тренироваться можно
-        и&nbsp;самостоятельно.</p>
+      <p class="trails__text">На шоссейном велосипеде можно ездить&nbsp;по асфальту на разных градиентах:
+        будь то горы или равнины. Гонки проходят в командном пелотоне, но тренироваться можно
+        и самостоятельно.</p>
       <div class="trails__slider">
-        <img src="./images/trails/road.jpg" alt="Дорога в горы" class="trails__image">
-        <img src="./images/trails/road.jpg" alt="Велосипедист в лесу" class="trails__image">
+        <picture>
+          <source srcset="./images/trails/road-mountain-s.jpeg" media="(max-width: 424px)">
+          <img src="./images/trails/road-mountain-m.jpg" alt="Дорога в горы" class="trails__image">
+        </picture>
+        <img src="./images/trails/road-forest-m.jpg" alt="Велосипедист в лесу" class="trails__image">
       </div>
       <div class="trails__buttons-container">
         <button type="button" class="trails__button trails__button_left"></button>
@@ -74,6 +79,7 @@
     </section>
 
     <!-- Секция Велосипеды---Юлия -->
+    <!--
     <section class="bicycles">
       <h2 class="bicycles__title">Велосипеды</h2>
       <ul class="bicycles__links">
@@ -106,8 +112,9 @@
         <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
       </figure>
     </section>
-
+-->
     <!-- Секция Тренировки---Алла -->
+    <!--
     <section class="practices">
       <h2 class="practices__title">Тренировки</h2>
       <div class="practices__container">
@@ -134,7 +141,7 @@
     </form>
     <p class="footer__author">&copy; Road Club 2021</p>
   </footer>
-
+-->
 </body>
 
 </html>
