style: плавность затемнения кнопок

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body class="page">
 
   <!-- Юлия -->
-  <!--
   <header class="header">
     <ul class="header__links">
       <li>
@@ -26,14 +25,14 @@
       </li>
     </ul>
   </header>
--->
+
   <main class="content">
     <!-- Секция первого экрана (с прилипающим велосипедом)---Юлия -->
-    <!--
     <section class="lead">
       <div class="lead__description">
         <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
-        <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
+        <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным
+          маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
         <button class="lead__button">Подробнее</button>
         <div class="lead__bicycle-model">
           <p class="lead__name">Cannondale Systemsix</p>
@@ -45,7 +44,7 @@
         <img src="./images/lead/cannondale-systemsix.jpg" alt="Горный велосипед" class="lead__image">
       </div>
     </section>
--->
+
     <!-- Секция с цитатой---Алла -->
     <section class="quote">
       <picture class="quote__image">
@@ -76,7 +75,6 @@
     </section>
 
     <!-- Секция Велосипеды---Юлия -->
-    <!--
     <section class="bicycles">
       <h2 class="bicycles__title">Велосипеды</h2>
       <ul class="bicycles__links">
@@ -109,9 +107,9 @@
         <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
       </figure>
     </section>
--->
+
     <!-- Секция Тренировки---Алла -->
-    <!--
+
     <section class="practices">
       <h2 class="practices__title">Тренировки</h2>
       <div class="practices__container">
@@ -138,7 +136,7 @@
     </form>
     <p class="footer__author">&copy; Road Club 2021</p>
   </footer>
--->
+
 </body>
 
 </html>
