--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="page">
 
   <!-- Юлия -->
+  <!--
   <header class="header">
     <ul class="header__links">
       <li>
@@ -25,9 +26,10 @@
       </li>
     </ul>
   </header>
-
+-->
   <main class="content">
     <!-- Секция первого экрана (с прилипающим велосипедом)---Юлия -->
+    <!--
     <section class="lead">
       <div class="lead__description">
         <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
@@ -44,8 +46,9 @@
         <img src="./images/lead/cannondale-systemsix.jpg" alt="Горный велосипед" class="lead__image">
       </div>
     </section>
-
+-->
     <!-- Секция с цитатой---Алла -->
+    <!--
     <section class="quote">
       <picture class="quote__image">
         <source srcset="./images/quote/cyclist-s.jpg" media="(max-width: 424px)">
@@ -57,8 +60,9 @@
       <h2 class="quote__author">Эдди Меркс</h2>
       <p class="quote__author-subline">Велогонщик</p>
     </section>
-
+-->
     <!-- Секция Шоссе---Алла -->
+    <!--
     <section class="trails">
       <h2 class="trails__title">Шоссе</h2>
       <p class="trails__text">На шоссейном велосипеде можно ездить&nbsp;по асфальту на разных градиентах:
@@ -73,8 +77,9 @@
         <button type="button" class="trails__button trails__button_right"></button>
       </div>
     </section>
-
+-->
     <!-- Секция Велосипеды---Юлия -->
+    <!--
     <section class="bicycles">
       <h2 class="bicycles__title">Велосипеды</h2>
       <ul class="bicycles__links">
@@ -107,7 +112,7 @@
         <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
       </figure>
     </section>
-
+-->
     <!-- Секция Тренировки---Алла -->
     <section class="practices">
       <h2 class="practices__title">Тренировки</h2>
@@ -126,6 +131,7 @@
     </section>
   </main>
 
+  <!-- Алла -->
   <footer class="footer">
     <form class="footer__form"></form>
     <label class="footer__form-label" for="email">Подпишитесь на&nbsp;рассылку &mdash;</label>
