style: добавить стили для футера

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 
   <!-- Алла -->
   <footer class="footer">
-    <form class="footer__form"></form>
-    <label class="footer__form-label" for="email">Подпишитесь на&nbsp;рассылку &mdash;</label>
-    <input class="footer__form-email" type="email" name="email" id="email" placeholder="Ваш e-mail">
+    <form class="footer__form">
+      <label class="footer__form-label" for="email">Подпишитесь&nbsp;на рассылку &mdash;</label>
+      <input class="footer__form-email" type="email" name="email" id="email" placeholder="Ваш e-mail">
     </form>
-    <p class="footer__author">&copy; Road Club 2021</p>
+    <p class="footer__copyright">&copy; Road Club 2021</p>
   </footer>
 </body>
 
