--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
           <div class="lead__decoration"></div>
         </div>
       </div>
+      <img src="./images/lead/background.jpg" alt="Горный велосипед" class="lead__background">
       <div class="lead__container">
-        <img src="./images/lead/background.jpg" alt="Горный велосипед" class="lead__background">
-        <img src="./images/lead/cannondale-systemsix.jpg" alt="Горный велосипед" class="lead__image">
+        <div class="lead__rectangle">
+          <img src="./images/lead/cannondale-systemsix.jpg" alt="Горный велосипед" class="lead__image">
+        </div>
       </div>
     </section>
 
