часть секции bikes

--- a/index.html
+++ b/index.html
@@ -87,24 +87,32 @@
           <a href="#" class="bicycles__link">ТТ</a>
         </li>
       </ul>
-      <figure class="bicycles__container">
-        <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN"
-          target="_blank"><img src="./images/bicycles/cervelo-caledonia.jpg" alt="Велосипед Червел Каледония"
+      <ul class="bicycles__list">
+        <li>
+          <figure class="bicycles__container">
+            <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN"
+            target="_blank"><img src="./images/bicycles/cervelo-caledonia.jpg" alt="Велосипед Червел Каледония"
             class="bicycles__image"></a>
-        <figcaption class="bicycles__caption">Cervelo Caledonia-5</figcaption>
-      </figure>
-      <figure class="bicycles__container">
-        <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
-          target="_blank"><img src="./images/bicycles/cannondale-systemsix.jpg" alt="Велосипед Каннондейл"
+            <figcaption class="bicycles__caption">Cervelo Caledonia-5</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="bicycles__container">
+            <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
+            target="_blank"><img src="./images/bicycles/cannondale-systemsix.jpg" alt="Велосипед Каннондейл"
             class="bicycles__image"></a>
-        <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
-      </figure>
-      <figure class="bicycles__container">
-        <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
-          target="_blank"><img src="./images/bicycles/trek-domane.jpg" alt="Велосипед Трек Домейн"
+            <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
+          </figure>
+        </li>
+        <li>  
+          <figure class="bicycles__container">
+            <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
+            target="_blank"><img src="./images/bicycles/trek-domane.jpg" alt="Велосипед Трек Домейн"
             class="bicycles__image"></a>
-        <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
-      </figure>
+            <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
+          </figure>
+        </li>
+      </ul>
     </section>
 
     <!-- Секция Тренировки---Алла -->
