--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
         <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным
           маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
-        <button class="lead__button"><p class="lead__button-text">Подробнее</p></button>
+        <button class="lead__button">Подробнее</button>
         <div class="lead__bicycle-model">
           <p class="lead__name">Cannondale Systemsix</p>
           <div class="lead__decoration"></div>
         </div>
       </div>
       <div class="lead__container">
-          <img src="./images/lead/cannondale-systemsix.jpg" alt="Горный велосипед" class="lead__image">
+        <img src="./images/lead/bike-fix.jpg" alt="Горный велосипед" class="lead__image">
       </div>
     </section>
 
@@ -90,20 +90,20 @@
       <div class="bicycles__list">
         <figure class="bicycles__container">
           <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN"
-          target="_blank"><img src="./images/bicycles/cervelo-caledonia.jpg" alt="Велосипед Червел Каледония"
-          class="bicycles__image"></a>
+            target="_blank"><img src="./images/bicycles/cervelo-caledonia.jpg" alt="Велосипед Червел Каледония"
+              class="bicycles__image"></a>
           <figcaption class="bicycles__caption">Cervelo Caledonia-5</figcaption>
         </figure>
         <figure class="bicycles__container">
           <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
-          target="_blank"><img src="./images/bicycles/cannondale-systemsix.jpg" alt="Велосипед Каннондейл"
-          class="bicycles__image"></a>
+            target="_blank"><img src="./images/bicycles/cannondale-systemsix.jpg" alt="Велосипед Каннондейл"
+              class="bicycles__image"></a>
           <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
         </figure>
         <figure class="bicycles__container">
           <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
-          target="_blank"><img src="./images/bicycles/trek-domane.jpg" alt="Велосипед Трек Домейн"
-          class="bicycles__image"></a>
+            target="_blank"><img src="./images/bicycles/trek-domane.jpg" alt="Велосипед Трек Домейн"
+              class="bicycles__image"></a>
           <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
         </figure>
       </div>
