--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <!-- Юлия -->
   <header class="header">
     <ul class="header__links">
-      <li>
+      <li class="header__link-compact">
         <a href="#" class="header__link">Покрытия и&nbsp;градиенты</a>
       </li>
-      <li>
+      <li class="header__link-compact">
         <a href="#" class="header__link">Велосипеды</a>
       </li>
-      <li>
+      <li class="header__link-compact">
         <a href="#" class="header__link">Тренировки</a>
       </li>
     </ul>
@@ -74,6 +74,7 @@
     </section>
 
     <!-- Секция Велосипеды---Юлия -->
+    <!--
     <section class="bicycles">
       <h2 class="bicycles__title">Велосипеды</h2>
       <ul class="bicycles__links">
@@ -108,7 +109,7 @@
         </figure>
       </div>
     </section>
-
+-->
     <!-- Секция Тренировки---Алла -->
     <section class="practices">
       <h2 class="practices__title">Тренировки</h2>
