style: сделать lead адаптивным

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="page">
 
-  <!-- Юлия -->
+  <!-- Алла и Юлия -->
   <header class="header">
     <ul class="header__links">
       <li class="header__link-compact">
@@ -27,20 +27,17 @@
   </header>
 
   <main class="content">
-    <!-- Секция первого экрана (с прилипающим велосипедом)---Юлия -->
+    <!-- Секция первого экрана (с прилипающим велосипедом)---Алла и Юлия -->
     <section class="lead">
-      <div class="lead__description">
-        <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
-        <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным
-          маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
-        <button class="lead__button">Подробнее</button>
-        <div class="lead__bicycle-model">
-          <p class="lead__name">Cannondale Systemsix</p>
-          <div class="lead__decoration"></div>
-        </div>
-      </div>
-      <div class="lead__container">
-        <img src="./images/lead/bike-fix.jpg" alt="Горный велосипед" class="lead__image">
+      <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
+      <img src="./images/lead/forest.jpg" alt="Лесная дорога" class="lead__image">
+      <img src="./images/lead/bike-fix.jpg" alt="Горный велосипед" class="lead__bicycle">
+      <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по живописным
+        маршрутам - нужно только определиться с выбором велосипеда и отправиться в путь.</p>
+      <button class="lead__button">Подробнее</button>
+      <div class="lead__bicycle-model">
+        <p class="lead__name">Cannondale Systemsix</p>
+        <div class="lead__decoration"></div>
       </div>
     </section>
 
@@ -74,7 +71,6 @@
     </section>
 
     <!-- Секция Велосипеды---Юлия -->
-    <!--
     <section class="bicycles">
       <h2 class="bicycles__title">Велосипеды</h2>
       <ul class="bicycles__links">
@@ -109,7 +105,7 @@
         </figure>
       </div>
     </section>
--->
+
     <!-- Секция Тренировки---Алла -->
     <section class="practices">
       <h2 class="practices__title">Тренировки</h2>
