--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
         <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным
           маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
-        <button class="lead__button"><p class="lead__button-text">Подробнее</p></button>
+        <button class="lead__button">Подробнее</button>
         <div class="lead__bicycle-model">
           <p class="lead__name">Cannondale Systemsix</p>
           <div class="lead__decoration"></div>
