feat: написать readme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header">
     <ul class="header__links">
       <li class="header__link-compact">
-        <a href="#" class="header__link">Покрытия и&nbsp;градиенты</a>
+        <a href="#" class="header__link">Покрытия и градиенты</a>
       </li>
       <li class="header__link-compact">
         <a href="#" class="header__link">Велосипеды</a>
@@ -110,7 +110,7 @@
     <section class="practices">
       <h2 class="practices__title">Тренировки</h2>
       <p class="practices__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot,
-        а&nbsp;записать эти тренировки поможет приложение Strava, а&nbsp;также это приложение позволит построить
+        а записать эти тренировки поможет приложение Strava, а также это приложение позволит построить
         тренировочный план.</p>
       <ul class="practices__links">
         <li>
