--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
             target="_blank"><img src="./images/bicycles/trek-domane.jpg" alt="Велосипед Трек Домейн"
               class="bicycles__image"></a>
-          <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
+          <figcaption class="bicycles__caption">Trek Domane SL-7</figcaption>
         </figure>
       </div>
     </section>
