--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <a href="#" class="bicycles__link">ТТ</a>
           </li>
         </ul>
+        <select class="bicycles__select">
+          <option class="bicycles__option">Шоссе</option>
+          <option class="bicycles__option">Грэвел</option>
+          <option class="bicycles__option">ТТ</option>
+        </select>
       </div>
       <div class="bicycles__list">
         <figure class="bicycles__container">
