feat: поправить стили bicycles

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 
   <!-- Алла и Юлия -->
   <header class="header">
-    <ul class="header__links">
-      <li class="header__link-compact">
-        <a href="#" class="header__link">Покрытия и градиенты</a>
-      </li>
-      <li class="header__link-compact">
-        <a href="#" class="header__link">Велосипеды</a>
-      </li>
-      <li class="header__link-compact">
-        <a href="#" class="header__link">Тренировки</a>
-      </li>
-    </ul>
+    <nav>
+      <ul class="header__links">
+        <li class="header__link-compact">
+          <a href="#" class="header__link">Покрытия и градиенты</a>
+        </li>
+        <li class="header__link-compact">
+          <a href="#" class="header__link">Велосипеды</a>
+        </li>
+        <li class="header__link-compact">
+          <a href="#" class="header__link">Тренировки</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <main class="content">
@@ -76,7 +78,7 @@
         <h2 class="bicycles__title">Велосипеды</h2>
         <ul class="bicycles__links">
           <li>
-            <a href="#" class="bicycles__link">Шоссе</a>
+            <a href="#" class="bicycles__link bicycles__link_activ">Шоссе</a>
           </li>
           <li>
             <a href="#" class="bicycles__link">Грэвел</a>
@@ -94,19 +96,19 @@
       <div class="bicycles__list">
         <figure class="bicycles__container">
           <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN"
-            target="_blank"><img src="./images/bicycles/cervelo-caledonia.jpg" alt="Велосипед Червел Каледония"
+            target="_blank"><img src="./images/bicycles/Cervelo-Caledonia-5.jpg" alt="Велосипед Червел Каледония"
               class="bicycles__image"></a>
           <figcaption class="bicycles__caption">Cervelo Caledonia-5</figcaption>
         </figure>
         <figure class="bicycles__container">
           <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
-            target="_blank"><img src="./images/bicycles/cannondale-systemsix.jpg" alt="Велосипед Каннондейл"
+            target="_blank"><img src="./images/bicycles/Cannondale-Systemsix-Himod.jpg" alt="Велосипед Каннондейл"
               class="bicycles__image"></a>
           <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
         </figure>
         <figure class="bicycles__container">
           <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
-            target="_blank"><img src="./images/bicycles/trek-domane.jpg" alt="Велосипед Трек Домейн"
+            target="_blank"><img src="./images/bicycles/Trek-Domane-SL-7.jpg" alt="Велосипед Трек Домейн"
               class="bicycles__image"></a>
           <figcaption class="bicycles__caption">Trek Domane SL-7</figcaption>
         </figure>
