--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <main class="content">
-    <!-- Секция первого экрана (с прилипающим велосипедом)---Алла и Юлия -->
+    <!-- Секция первого экрана ---Алла и Юлия -->
     <section class="lead">
       <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
       <img src="./images/lead/forest.jpg" alt="Лесная дорога" class="lead__image">
@@ -72,7 +72,7 @@
       </div>
     </section>
 
-    <!-- Секция Велосипеды---Юлия -->
+    <!-- Секция Велосипеды--- Юлия и Алла -->
     <section class="bicycles">
       <div class="bicycles__head">
         <h2 class="bicycles__title">Велосипеды</h2>
