--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
   </header>
 
-  <main class="content">
+  <main>
     <!-- Секция первого экрана ---Алла и Юлия -->
     <section class="lead">
       <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
