--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <!-- Секция первого экрана ---Алла и Юлия -->
     <section class="lead">
       <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
-      <img src="./images/lead/forest.jpg" alt="Лесная дорога" class="lead__image">
-      <img src="./images/lead/bike-fix.jpg" alt="Горный велосипед" class="lead__bicycle">
+      <img src="./images/lead-forest.jpg" alt="Лесная дорога" class="lead__image">
+      <img src="./images/lead-bike-fix.jpg" alt="Горный велосипед" class="lead__bicycle">
       <p class="lead__text">Триатлонные старты, горные серпантины или грейвел заезды по живописным
         маршрутам - нужно только определиться с выбором велосипеда и отправиться в путь.</p>
       <button class="lead__button">Подробнее</button>
@@ -46,8 +46,8 @@
     <!-- Секция с цитатой---Алла -->
     <section class="quote">
       <picture class="quote__image">
-        <source srcset="./images/quote/cyclist-s.jpg" media="(max-width: 424px)">
-        <img class="quote__image_size" src="./images/quote/cyclist-m.jpg" alt="Человек едет в горы на велосипеде">
+        <source srcset="./images/quote-cyclist-s.jpg" media="(max-width: 424px)">
+        <img class="quote__image_size" src="./images/quote-cyclist-m.jpg" alt="Человек едет в горы на велосипеде">
       </picture>
       <blockquote class="quote__text-container">
         <p class="quote__text">&laquo;Катайся много или мало, долго или коротко, как хочешь - но катайся&raquo;</p>
@@ -63,8 +63,8 @@
         будь то горы или равнины. Гонки проходят в командном пелотоне, но тренироваться можно
         и самостоятельно.</p>
       <div class="trails__slider">
-        <img src="./images/trails/road-mountain.jpg" alt="Дорога в горы" class="trails__image">
-        <img src="./images/trails/road-forest.jpg" alt="Велосипедист в лесу" class="trails__image">
+        <img src="./images/trails-road-mountain.jpg" alt="Дорога в горы" class="trails__image">
+        <img src="./images/trails-road-forest.jpg" alt="Велосипедист в лесу" class="trails__image">
       </div>
       <div class="trails__buttons-container">
         <button type="button" class="trails__button trails__button_left"></button>
@@ -96,19 +96,19 @@
       <div class="bicycles__list">
         <figure class="bicycles__container">
           <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN"
-            target="_blank"><img src="./images/bicycles/Cervelo-Caledonia-5.jpg" alt="Велосипед Червел Каледония"
+            target="_blank"><img src="./images/bicycles-Cervelo-Caledonia-5.jpg" alt="Велосипед Червел Каледония"
               class="bicycles__image"></a>
           <figcaption class="bicycles__caption">Cervelo Caledonia-5</figcaption>
         </figure>
         <figure class="bicycles__container">
           <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
-            target="_blank"><img src="./images/bicycles/Cannondale-Systemsix-Himod.jpg" alt="Велосипед Каннондейл"
+            target="_blank"><img src="./images/bicycles-Cannondale-Systemsix-Himod.jpg" alt="Велосипед Каннондейл"
               class="bicycles__image"></a>
           <figcaption class="bicycles__caption">Cannondale Systemsix Himod</figcaption>
         </figure>
         <figure class="bicycles__container">
           <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
-            target="_blank"><img src="./images/bicycles/Trek-Domane-SL-7.jpg" alt="Велосипед Трек Домейн"
+            target="_blank"><img src="./images/bicycles-Trek-Domane-SL-7.jpg" alt="Велосипед Трек Домейн"
               class="bicycles__image"></a>
           <figcaption class="bicycles__caption">Trek Domane SL-7</figcaption>
         </figure>
@@ -129,7 +129,7 @@
           <a href="https://www.komoot.com" target="_blank" class="practices__link">Komoot</a>
         </li>
       </ul>
-      <img src="./images/practices/practices-road-forest.jpg" alt="Дорога в лесу" class="practices__image">
+      <img src="./images/practices-road-forest.jpg" alt="Дорога в лесу" class="practices__image">
     </section>
   </main>
 
