--- a/index.html
+++ b/index.html
@@ -76,17 +76,19 @@
     <section class="bicycles">
       <div class="bicycles__head">
         <h2 class="bicycles__title">Велосипеды</h2>
-        <ul class="bicycles__links">
-          <li>
-            <a href="#" class="bicycles__link bicycles__link_activ">Шоссе</a>
-          </li>
-          <li>
-            <a href="#" class="bicycles__link">Грэвел</a>
-          </li>
-          <li>
-            <a href="#" class="bicycles__link">ТТ</a>
-          </li>
-        </ul>
+        <nav>
+          <ul class="bicycles__links">
+            <li>
+              <a href="#" class="bicycles__link bicycles__link_activ">Шоссе</a>
+            </li>
+            <li>
+              <a href="#" class="bicycles__link">Грэвел</a>
+            </li>
+            <li>
+              <a href="#" class="bicycles__link">ТТ</a>
+            </li>
+          </ul>
+        </nav>
         <select class="bicycles__select">
           <option class="bicycles__option">Шоссе</option>
           <option class="bicycles__option">Грэвел</option>
@@ -121,14 +123,16 @@
       <p class="practices__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot,
         а записать эти тренировки поможет приложение Strava, а также это приложение позволит построить
         тренировочный план.</p>
-      <ul class="practices__links">
-        <li>
-          <a href="https://www.strava.com" target="_blank" class="practices__link">Strava</a>
-        </li>
-        <li>
-          <a href="https://www.komoot.com" target="_blank" class="practices__link">Komoot</a>
-        </li>
-      </ul>
+      <nav>
+        <ul class="practices__links">
+          <li>
+            <a href="https://www.strava.com" target="_blank" class="practices__link">Strava</a>
+          </li>
+          <li>
+            <a href="https://www.komoot.com" target="_blank" class="practices__link">Komoot</a>
+          </li>
+        </ul>
+      </nav>
       <img src="./images/practices-road-forest.jpg" alt="Дорога в лесу" class="practices__image">
     </section>
   </main>
