fix: поправить стили

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
           <figcaption class="bicycles__caption">Trek Domane SL-7</figcaption>
         </figure>
       </div>
+      <p class="bicycles__points"><span class="bicycles__points bicycles__points_activ">.</span>..</p>
     </section>
 
     <!-- Секция Тренировки---Алла -->
@@ -123,16 +124,14 @@
       <p class="practices__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot,
         а записать эти тренировки поможет приложение Strava, а также это приложение позволит построить
         тренировочный план.</p>
-      <nav>
-        <ul class="practices__links">
-          <li>
-            <a href="https://www.strava.com" target="_blank" class="practices__link">Strava</a>
-          </li>
-          <li>
-            <a href="https://www.komoot.com" target="_blank" class="practices__link">Komoot</a>
-          </li>
-        </ul>
-      </nav>
+      <ul class="practices__links">
+        <li>
+          <a href="https://www.strava.com" target="_blank" class="practices__link">Strava</a>
+        </li>
+        <li>
+          <a href="https://www.komoot.com" target="_blank" class="practices__link">Komoot</a>
+        </li>
+      </ul>
       <img src="./images/practices-road-forest.jpg" alt="Дорога в лесу" class="practices__image">
     </section>
   </main>
