--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 
 <body class="page">
-
-  <!-- Алла и Юлия -->
   <header class="header">
     <nav>
       <ul class="header__links">
@@ -28,8 +26,7 @@
     </nav>
   </header>
 
-  <main>
-    <!-- Секция первого экрана ---Алла и Юлия -->
+  <main class="content">
     <section class="lead">
       <h1 class="lead__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
       <img src="./images/lead-forest.jpg" alt="Лесная дорога" class="lead__image">
@@ -43,7 +40,6 @@
       </div>
     </section>
 
-    <!-- Секция с цитатой---Алла -->
     <section class="quote">
       <picture class="quote__image">
         <source srcset="./images/quote-cyclist-s.jpg" media="(max-width: 424px)">
@@ -56,7 +52,6 @@
       <p class="quote__author-subline">Велогонщик</p>
     </section>
 
-    <!-- Секция Шоссе---Алла -->
     <section class="trails">
       <h2 class="trails__title">Шоссе</h2>
       <p class="trails__text">На шоссейном велосипеде можно ездить&nbsp;по асфальту на разных градиентах:
@@ -72,7 +67,6 @@
       </div>
     </section>
 
-    <!-- Секция Велосипеды--- Юлия и Алла -->
     <section class="bicycles">
       <div class="bicycles__head">
         <h2 class="bicycles__title">Велосипеды</h2>
@@ -118,7 +112,6 @@
       <p class="bicycles__points"><span class="bicycles__points bicycles__points_activ">.</span>..</p>
     </section>
 
-    <!-- Секция Тренировки---Алла -->
     <section class="practices">
       <h2 class="practices__title">Тренировки</h2>
       <p class="practices__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot,
@@ -136,7 +129,6 @@
     </section>
   </main>
 
-  <!-- Алла -->
   <footer class="footer">
     <form class="footer__form">
       <label class="footer__form-label" for="email">Подпишитесь&nbsp;на рассылку &mdash;</label>
