fix: поправить цвет текстов

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="quote">
       <picture class="quote__image">
         <source srcset="./images/quote-cyclist-s.jpg" media="(max-width: 424px)">
-        <img class="quote__image_size" src="./images/quote-cyclist-m.jpg" alt="Человек едет в горы на велосипеде">
+        <img class="quote__image-size" src="./images/quote-cyclist-m.jpg" alt="Человек едет в горы на велосипеде">
       </picture>
       <blockquote class="quote__text-container">
         <p class="quote__text">&laquo;Катайся много или мало, долго или коротко, как хочешь - но катайся&raquo;</p>
@@ -62,8 +62,8 @@
         <img src="./images/trails-road-forest.jpg" alt="Велосипедист в лесу" class="trails__image">
       </div>
       <div class="trails__buttons-container">
-        <button type="button" class="trails__button trails__button_left"></button>
-        <button type="button" class="trails__button trails__button_right"></button>
+        <button type="button" class="trails__button trails__button_left" aria-label="Листать влево"></button>
+        <button type="button" class="trails__button trails__button_right" aria-label="Листать вправо"></button>
       </div>
     </section>
 
